Fix IE9 overflow and font rendering bug.
Characters such as "g" "p" "q" could cause IE9 to display scrollbar on x
axis if line-height is set to equal to font-size.

--- a/app/stylesheets/layout.styl
+++ b/app/stylesheets/layout.styl
@@ -173,7 +173,7 @@ section#main
       display block
       font-size 24px
       font-weight bold
-      line-height 24px
+      line-height 28px
 
     p
       color $color-dark-highlight
